--- a/arartekomaps/templates/base.html
+++ b/arartekomaps/templates/base.html
@@ -14,6 +14,20 @@
     {% block extraheader %}
     {% endblock %}
 
+<meta name="google-site-verification" content="QU6fy18f0ZFLUARiKUbdcBA438hPKSghkhtVE5j14Ps" />
+
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36392146-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
 </head>
 
 <body id="tpl_{{template_name}}" onload="initialize()">
