Filter translation + css style changes + export csv command + robots.txt added

--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -21,6 +21,7 @@
 {% trans "cat_bus" %}
 {% trans "cat_train" %}
 {% trans "cat_tram" %}
+{% trans "cat_metro" %}
 
 {% trans "cat_culture" %}
 {% trans "cat_library" %}
