--- a/arartekomaps/templates/home.html
+++ b/arartekomaps/templates/home.html
@@ -60,7 +60,7 @@
               <label for="q">{% trans "Go to..." %}</label> <input id="q" name="q" type="text" />
               <input class="searchbutton" type="submit" name="sa" value="{% trans "Search" %}" />
               <input type="hidden" name="cof" value="FORID:11" />
-              <p><a href="/filter/">Filtro aurreratua</a></p>
+              <p><a href="/filter/">{% trans "filter" %}</a></p>
           </form>
           <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=searchbox_001098326678246934980%3Afr8fiqutrzm"></script>
           <!-- Google CSE Search Box Ends -->
