--- a/arartekomaps/static/css/global.css
+++ b/arartekomaps/static/css/global.css
@@ -100,7 +100,7 @@ header img{
 }
 #utils form{
     float:left;
-}.searchbutton
+}
 #utils label{
     color:white;
 }
@@ -172,7 +172,7 @@ header img{
 }
 .searchbutton{
     background:url("../img/botoisearch.png") no-repeat top left;
-    padding:5px 15px 32px 15px;
+    padding:5px 10px 32px 10px;
     border:none;
     position:absolute;
 }
@@ -184,7 +184,7 @@ header img{
 #bigsf p{
     font-size: 80%;
     font-weight: normal;
-    padding-left: 330px;
+    padding-left: 310px;
     padding-top: 5px;
     text-align: left;
 }
@@ -215,6 +215,7 @@ header img{
     -moz-border-radius:0 0 8px 8px;
     -webkit-border-radius:0 0 8px 8px;
     padding:4px 45px 4px 10px;
+    padding:4px 10px 4px 10px;
     box-shadow:0 5px 5px rgba(0,0,0,0.5);
     -moz-box-shadow:0 5px 5px rgba(0,0,0,0.5);
     -webkit-box-shadow:0 5px 5px rgba(0,0,0,0.5);
@@ -530,6 +531,11 @@ dl.accesstext dt{
 #placecol2 h3{
     color:gray;
 }
+
+#imagelist h3{ 
+    border-bottom:1px dotted black;
+}
+
 /******************komentarioak*********************/
 #commentlist {
      margin-top:20px;   
@@ -763,9 +769,9 @@ dl.accesstext dt{
     border-radius:5px;
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
-    box-shadow:0 2px 5px rgba(0,0,0,0.7);
-    -moz-box-shadow:0 2px 5px rgba(0,0,0,0.7);
-    -webkit-box-shadow:0 2px 5px rgba(0,0,0,0.7);
+    box-shadow:2px 2px 2px rgba(1,1,1,0.5), 0 2px 2px rgba(1,1,1,0.7) inset;
+    -moz-box-shadow:2px 2px 2px rgba(1,1,1,0.5), 0 2px 2px rgba(1,1,1,0.7) inset;
+    -webkit-box-shadow:2px 2px 2px rgba(1,1,1,0.5), 0 2px 2px rgba(1,1,1,0.7) inset;
     behavior: url("/static/css/PIE.htc");
     cursor:pointer;
 }
