Pagination added and gsearch changed

--- a/arartekomaps/static/css/global.css
+++ b/arartekomaps/static/css/global.css
@@ -739,7 +739,7 @@ dl.accesstext dt{
     cursor:pointer;
     position:relative;
 }
-/****************bilaketa************/
+/****************Google Search************/
 
 #advsearch{
     background-color:#efefef;
