--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -50,6 +50,7 @@
 {% trans "ayto" %}
 {% trans "auto" %}
 {% trans "priv" %}
+{% trans "fora" %}
 
 {% trans "l" %}
 {% trans "r" %}
@@ -65,4 +66,6 @@
 {% trans "ejgv-tur-aloj" %}
 {% trans "ejgv-tur-infos" %}
 {% trans "Consultrans" %}
+{% trans "dfa" %}
+{% trans "fekoor" %}
 
