Added new categories

--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -11,6 +11,7 @@
 {% trans "cat_casa-rural" %}
 {% trans "cat_hotel-apartamento" %}
 {% trans "cat_pension" %}
+{% trans "cat_albergue" %}
 
 {% trans "cat_eat" %}
 {% trans "cat_restaurant" %}
@@ -44,6 +45,20 @@
 {% trans "prestamo_inter" %}
 {% trans "bol_novedades" %}
 {% trans "selectiva" %} 
+{% trans "infantil" %} 
+{% trans "seccion_local" %} 
+{% trans "comiteca" %} 
+{% trans "fondo_antiguo" %}
+{% trans "formacion" %}
+{% trans "sala_estudio" %}
+{% trans "sala_investigacion" %}
+{% trans "visitas_guiadas" %}
+{% trans "publicaciones" %}
+
+{% trans "mediateca" %} 
+{% trans "lectura_facil" %} 
+{% trans "seccion_xl" %} 
+{% trans "audiolibros" %} 
 
 {% trans "general" %}
 
@@ -67,5 +82,7 @@
 {% trans "ejgv-tur-infos" %}
 {% trans "Consultrans" %}
 {% trans "dfa" %}
+{% trans "dfb" %}
+{% trans "dfg" %}
 {% trans "fekoor" %}
 
