--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -165,7 +165,7 @@
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="arartekomapak" data-text="{% trans place.category.str2trans %} {{place.name}}, {{place.city}}" data-lang="{{LANGUAGE_CODE}}">Twittear</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-<div id="imagelist">
+<!-- <div id="imagelist">
 <h3>{% trans "User Images" %}</h3>
 {% for box in users %}
 <div class="comment">
@@ -185,11 +185,11 @@
 </div>
 {% endfor %}
 <a href="{{place.get_absolute_url}}addphoto/" class="button addcomment">{% trans "Add a photo" %}</a>
-</div>
+</div> -->
 
 <div id="commentlist">
-<h3>{% trans "Comments" %}</h3>
-
+ <h3>{% trans "Comments" %}</h3>
+<!--
 {% include "comments.html" %}
 
 {% get_comment_list for place as comment_list %}
@@ -206,11 +206,17 @@
         <p class="date">{{comment.submit_date}}</p>
     </div>
 </div>
-<!-- comment end -->
 
-{% endfor %}
+{% endfor %} -->
 
+<form method="post" action="" id="communityform" ENCTYPE="multipart/form-data">
+        {% csrf_token %}
+        {{form.as_p}}
+        <div class="fieldWrapper">
+        <input type="submit" value="Gehitu" class="botoia" />
+        </div>
 
+</form>
 
 </div>
 <!-- commentlist end -->
