Many translations added

--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -67,6 +67,7 @@ Servicios bibliotecas
 {% trans "general" %}
 {% trans "euskalkultura" %}
 {% trans "especializada" %}
+{% trans "musica" %}
 
 {% trans "ayto" %}
 {% trans "auto" %}
