Missing translations to english

--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -188,7 +188,7 @@
             {% csrf_token %}
             {{form.as_p}}
             <div class="fieldWrapper">
-            <input type="submit" value="{% trans 'Gehitu' %}" class="botoia" />
+            <input type="submit" value="{% trans 'Add comment' %}" class="botoia" />
             </div>
 
     </form>
