--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -167,7 +167,12 @@
       {{place.name}}
   {% else %}
     {% trans place.source %}
-  {% endifequal %}</em></p>
+  {% endifequal %}
+  {% if place.modified_date %}
+  <br />
+  {% trans "modified_date" %}: 
+  {{place.modified_date|date:"Y-m-d"}}
+  {% endif %}</em></p>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
