--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -81,7 +81,7 @@
 
 {% if def_images %}
   {% for image in def_images %}
-  <a itemprop="image" href="{{image.image.url}}" rel="lightbox-group" title="{{image.name}}"><img src="{{image.get_admin_thumbnail_url}}" alt="{{image.name}} ({{image.user}})" title="{{image.name}} ({{image.user}})" class="placethumb" /></a>
+  <a itemprop="image" href="http://{{request.get_host}}{{image.image.url}}" rel="lightbox-group" title="{{image.name}}"><img src="http://{{request.get_host}}{{image.get_admin_thumbnail_url}}" alt="{{image.name}} ({{image.user}})" title="{{image.name}} ({{image.user}})" class="placethumb" /></a>
   {% endfor %}
 {% endif %}
 
@@ -95,9 +95,9 @@
 {% if place.tlf %}<br /><span itemprop="telephone" class="tlf">{{place.tlf}}</span>{% endif %}
 {% if place.fax %}<br /><span class="fax">{{place.fax}}</span>{% endif %}
 {% if place.url %}<br /><span class="web"><a href="{{place.url}}" itemprop="url">{% trans "Website" %}</a></span>{% endif %}
-
-</p>
+</span>
 </address>
+
 
 <p>{{place.description|default_if_none:""}}</p>
 
