--- a/arartekomaps/templates/home.html
+++ b/arartekomaps/templates/home.html
@@ -116,6 +116,7 @@
 </div>
 
 <div id="homefeatured">
+  {% comment %}
   <h2>{% trans "Download our app" %}</h2>
   <p>{% trans "Download our apps presentation text" %}</p>
   <div id="appbadges">  
@@ -125,8 +126,9 @@
     <a href="https://itunes.apple.com/es/app/ararmapak/id727622778?mt=8">
         <img alt="Ararteko mapak iPhone app on Apple Store" src="{{STATIC_URL}}img/applebadge.png" />
     </a>
-
   </div>
+  {% endcomment %}
+  
   <h2>{% trans "Visit this places" %}</h2>
   
   <ul id="provinces">
