--- a/arartekomaps/templates/home.html
+++ b/arartekomaps/templates/home.html
@@ -116,7 +116,7 @@
 </div>
 
 <div id="homefeatured">
-  {% comment %}
+
   <h2>{% trans "Download our app" %}</h2>
   <p>{% trans "Download our apps presentation text" %}</p>
   <div id="appbadges">  
@@ -127,7 +127,7 @@
         <img alt="Ararteko mapak iPhone app on Apple Store" src="{{STATIC_URL}}img/applebadge.png" />
     </a>
   </div>
-  {% endcomment %}
+  {% comment %}  {% endcomment %}
   
   <h2>{% trans "Visit this places" %}</h2>
   
