--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -224,7 +224,7 @@
     </div>
 
    <!-- /map_container -->
-<div id="nearest">
+<div id="nearest" class="nocontent">
 <h3>{% trans "Nearest places" %}</h3>
 
  <ul class="itemlist">
