ETS tren processor created

--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -77,6 +77,7 @@ Fuentes de datos
 {% trans "dfb" %}
 {% trans "dfg" %}
 {% trans "fekoor" %}
+{% trans "ETS" %}
 
 {% trans "agi" %}
 {% trans "gorrak" %}
