--- a/arartekomaps/templates/useroptions.html
+++ b/arartekomaps/templates/useroptions.html
@@ -7,13 +7,13 @@
     <div id="useroptionsname">
       {{ user.get_profile.get_fullname }} | 
      <span class="useroptions2">
-       <a href="{% url cssocialprofile_edit_profile %}">{% trans "Your profile" %}</a> | 
-       <a href="{% url cssocialprofile_logout %}?next={{request.path}}">{% trans "Sign out" %}</a></span>
+       <a href="{% url 'cssocialprofile_edit_profile' %}">{% trans "Your profile" %}</a> | 
+       <a href="{% url 'cssocialprofile_logout' %}?next={{request.path}}">{% trans "Sign out" %}</a></span>
     </div>
   </div>
 {%else%}
   <div id="userlogin">
-    <a href="{% url cssocialprofile_user_login %}?next={{request.path}}">{% trans "Sign in" %}</a>
+    <a href="{% url 'cssocialprofile_user_login' %}?next={{request.path}}">{% trans "Sign in" %}</a>
   </div>
 {%endif%}
 
